overflow fix

--- a/css/css.css
+++ b/css/css.css
@@ -13,6 +13,7 @@ body {
 
 main {
   background: #FFFACC;
+  overflow: hidden;
 }
 
 ol {
