--- a/css/stuff.scss
+++ b/css/stuff.scss
@@ -20,7 +20,8 @@ body{
 }
 
 main{
-	background: $fourth-color;
+    background: $fourth-color;
+    overflow: hidden;
 }
 
 ol {
